k8s-manifests/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: llm-api
  labels:
    app: llm-api
spec:
  replicas: 2
  selector:
    matchLabels:
      app: llm-api
  template:
    metadata:
      labels:
        app: llm-api
    spec:
      nodeSelector:
        gpu: "true"
      containers:
      - name: llm-api
        image: ariefshaik007/llm-api:latest
        ports:
        - containerPort: 8000
        readinessProbe:
          httpGet:
            path: /health
            port: 8000
          initialDelaySeconds: 15
          periodSeconds: 10
        livenessProbe:
          httpGet:  
            path: /health
            port: 8000
          initialDelaySeconds: 30
          periodSeconds: 20
        resources:
          requests:
            cpu: "250m" 
          limits:
            cpu: "500m"
