k8s-manifests/service.yml
apiVersion: v1
kind: Service
metadata:
  name: llm-api
  namespace: default
  annotations:
    prometheus.io/scrape: 'true'
    prometheus.io/port: '8000'
  labels:                 
    app: llm-api
spec:
  selector:
    app: llm-api
  type: ClusterIP
  ports:
    - name: http
      protocol: TCP
      port: 8000
      targetPort: 8000
